# ads2

./: .gitignore  README.md
Lab1/: .cppcheck.supp  CMakeLists.txt  CMakePresets.json  f0.txt  f1.txt  f2.txt  mainFile.txt  ourFile.txt
Lab1/source/: multiphasesorting  multiphasesorting.cpp
Lab2/: CMakeLists.txt  vcpkg.json
Lab2/include/: BinaryTree.h
Lab2/source/: BinaryTree.cpp  BinaryTreeMain  BinaryTreeMain.cpp
Lab3/: CMakeLists.txt
Lab3/include/: BinaryTreeSearch.h
Lab3/source/: BinaryTreeSearch.cpp  BinaryTreeSearchMain.cpp
Lab5/: CMakeLists.txt
Lab5/include/: HuffmanTree.h
Lab5/source/: HuffmanTree.cpp  HuffmanTreeMain.cpp
Lab6/: BaseHashTableWidget.cpp  BaseHashTableWidget.h  BaseHashTableWidget.ui  HashTable.h  HashTableWidget.pro  SceneHashTableWidget.cpp  SceneHashTableWidget.h  TableElementWidget.cpp  TableElementWidget.h  TableElementWidget.ui  main.cpp
